--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   "devDependencies": {
     "babel-plugin-root-import": "^6.4.1",
     "customize-cra": "^0.5.0",
-    "eslint": "^6.2.2",
+    "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.1.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "eslint-loader": "^3.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
